[gd_scene load_steps=3 format=3 uid="uid://tmumbi53osa6"]

[ext_resource type="Script" path="res://source/battle_system/battle_ability_manager.gd" id="1"]
[ext_resource type="Script" path="res://source/battle_system/battle_entity.gd" id="2"]

[node name="CombatEntity" type="Node2D"]
script = ExtResource("2")
entity_id = "alang"

[node name="PanelContainer" type="PanelContainer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
offset_right = 123.0
offset_bottom = 86.0

[node name="HBoxContainer3" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
offset_right = 123.0
offset_bottom = 26.0

[node name="lab_name" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer3"]
offset_right = 54.0
offset_bottom = 26.0
text = "jeremy"

[node name="LabName2" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer3"]
offset_left = 58.0
offset_right = 123.0
offset_bottom = 26.0
text = "minister"

[node name="HBoxContainer" type="MarginContainer" parent="PanelContainer/VBoxContainer"]
offset_top = 30.0
offset_right = 123.0
offset_bottom = 56.0

[node name="pb_health" type="ProgressBar" parent="PanelContainer/VBoxContainer/HBoxContainer"]
offset_right = 123.0
offset_bottom = 26.0
size_flags_horizontal = 3
size_flags_vertical = 3
percent_visible = false

[node name="lab_health" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer"]
offset_left = 21.0
offset_right = 101.0
offset_bottom = 26.0
size_flags_horizontal = 4
text = "1000/1000"

[node name="HBoxContainer2" type="MarginContainer" parent="PanelContainer/VBoxContainer"]
offset_top = 60.0
offset_right = 123.0
offset_bottom = 86.0

[node name="pb_attack" type="ProgressBar" parent="PanelContainer/VBoxContainer/HBoxContainer2"]
offset_right = 123.0
offset_bottom = 26.0
size_flags_horizontal = 3
size_flags_vertical = 3
percent_visible = false

[node name="lab_attack" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer2"]
offset_left = 21.0
offset_right = 101.0
offset_bottom = 26.0
size_flags_horizontal = 4
text = "1000/1000"

[node name="lab_test" type="Label" parent="."]
text = "atk: "

[node name="BattleAbilityManager" type="Node" parent="."]
script = ExtResource("1")
